--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,13 @@
 {
   "version": 2,
-  "buildCommand": "npm --prefix client install && npm --prefix client run build",
-  "outputDirectory": "client/build",
-  "installCommand": "npm --prefix client install"
+  "builds": [
+    {
+      "src": "client/package.json",
+      "use": "@vercel/static-build",
+      "config": { "distDir": "build" }
+    }
+  ],
+  "routes": [
+    { "src": "/(.*)", "dest": "/" }
+  ]
 }
